# distributed-FFT-for-kokkos

./: .clang-format  .cmake-format.py  .gitmodules  .typos.toml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: __clang-format-check.yaml  __cmake-format-check.yaml  build_test.yaml  ci.yml  cleanup_base.yaml  create_base.yaml
cmake/: FindNCCL.cmake  FindNVSHMEM.cmake  FindcuFFTMp.cmake  FindoneCCL.cmake  KokkosFFT_Distributed_Version_Info.hpp.in  KokkosFFT_Distributed_config.hpp.in  KokkosFFT_Git_Hash.cmake
distributed/: CMakeLists.txt
distributed/perf_test/: BenchmarkMPIMain.cpp  BenchmarkMain.cpp  Benchmark_Context.hpp  CMakeLists.txt  KokkosFFT_Distributed_PrintConfiguration.hpp  KokkosFFT_Distributed_TplsVersion.hpp  PerfTest_All2All.cpp  PerfTest_FFT3D.cpp  PerfTest_Pack.cpp  PerfTest_Transpose.cpp  PerfTest_Unpack.cpp  PerfTest_Utils.hpp
distributed/src/: All2All.hpp  Block.hpp  CMakeLists.txt  CufftMp_Plan.hpp  CufftMp_Transform.hpp  CufftMp_Types.hpp  Distributed.hpp  Extents.hpp  Helper.hpp  InternalPlan.hpp  KokkosFFT_Distributed.hpp  KokkosFFT_Distributed_All2All.hpp  KokkosFFT_Distributed_BlockAnalyses.hpp  KokkosFFT_Distributed_ContainerAnalyses.hpp  KokkosFFT_Distributed_CufftMp_Plan.hpp  KokkosFFT_Distributed_CufftMp_Transform.hpp  KokkosFFT_Distributed_CufftMp_Types.hpp  KokkosFFT_Distributed_Extents.hpp  KokkosFFT_Distributed_Helper.hpp  KokkosFFT_Distributed_InternalPlan.hpp  KokkosFFT_Distributed_MPI_All2All.hpp  KokkosFFT_Distributed_MPI_Comm.hpp  KokkosFFT_Distributed_MPI_Extents.hpp  KokkosFFT_Distributed_MPI_Helper.hpp  KokkosFFT_Distributed_MPI_Types.hpp  KokkosFFT_Distributed_Mapping.hpp  KokkosFFT_Distributed_PackUnpack.hpp  KokkosFFT_Distributed_PencilBlockAnalyses.hpp  KokkosFFT_Distributed_PencilPlan.hpp  KokkosFFT_Distributed_Plan.hpp  KokkosFFT_Distributed_RocfftMPI_Plan.hpp  KokkosFFT_Distributed_RocfftMPI_Transform.hpp  KokkosFFT_Distributed_RocfftMPI_Types.hpp  KokkosFFT_Distributed_SharedPlan.hpp  KokkosFFT_Distributed_SlabBlockAnalyses.hpp  KokkosFFT_Distributed_SlabPlan.hpp  KokkosFFT_Distributed_Topologies.hpp  KokkosFFT_Distributed_TplComm.hpp  KokkosFFT_Distributed_TplPlan.hpp  KokkosFFT_Distributed_TransBlock.hpp  (+20 more)
distributed/src/cuFFTMp/: KokkosFFT_Distributed_CufftMp_Plan.hpp  KokkosFFT_Distributed_CufftMp_Transform.hpp  KokkosFFT_Distributed_CufftMp_Types.hpp
distributed/src/nccl/: KokkosFFT_Distributed_NCCL_All2All.hpp  KokkosFFT_Distributed_NCCL_Comm.hpp  KokkosFFT_Distributed_NCCL_Types.hpp
distributed/src/oneCCL/: KokkosFFT_Distributed_oneCCL_All2All.hpp  KokkosFFT_Distributed_oneCCL_Comm.hpp  KokkosFFT_Distributed_oneCCL_Types.hpp
distributed/src/rocFFT/: KokkosFFT_Distributed_RocfftMPI_Plan.hpp  KokkosFFT_Distributed_RocfftMPI_Transform.hpp  KokkosFFT_Distributed_RocfftMPI_Types.hpp
distributed/unit_test/: CMakeLists.txt  Test_All2All.cpp  Test_Block.cpp  Test_BlockAnalyses.cpp  Test_Common_Utils.cpp  Test_ContainerAnalyses.cpp  Test_Extents.cpp  Test_MPI_Extents.cpp  Test_MPI_Helper.cpp  Test_MPI_Types.cpp  Test_Main.cpp  Test_Mapping.cpp  Test_Pack.cpp  Test_PencilPlan.cpp  Test_Plan.cpp  Test_Reshape.cpp  Test_SharedPlan.cpp  Test_SlabBlockAnalyses.cpp  Test_SlabPlan.cpp  Test_Topologies.cpp  Test_TplComm.cpp  Test_TplPlan.cpp  Test_TransBlock.cpp  Test_Transpose.cpp  Test_Types.cpp  Test_Unpack.cpp  Test_Utils.hpp
distributed/unit_test/nccl/: Test_NCCL_Types.cpp
distributed/unit_test/oneCCL/: Test_oneCCL_Types.cpp
docker/clang/: Dockerfile
docker/gcc/: Dockerfile
docker/intel/: Dockerfile
docker/nvcc/: Dockerfile
docker/nvhpc/: Dockerfile
docker/rocm/: Dockerfile
examples/: CMakeLists.txt  main.cpp
examples/derivative/: CMakeLists.txt  derivative.py  main.cpp
examples/derivative-3D/: 02_derivative_3D.cpp  CMakeLists.txt
examples/derivative-v2/: CMakeLists.txt  main.cpp
examples/derivative_X_slab/: CMakeLists.txt  main.cpp
examples/derivative_X_slab_v2/: CMakeLists.txt  main.cpp
examples/derivative_X_slab_v3/: CMakeLists.txt  main.cpp
examples/derivative_Y_slab/: CMakeLists.txt  main.cpp
examples/derivative_Y_slab_v2/: CMakeLists.txt  main.cpp
examples/derivative_Y_slab_v3/: CMakeLists.txt  main.cpp
examples/fftn/: CMakeLists.txt  fftn_slab.py  main.cpp
examples/fftn_X_pencil/: CMakeLists.txt  main.cpp
examples/fftn_Y_pencil/: CMakeLists.txt  main.cpp
examples/fftn_Z2Y/: CMakeLists.txt  main.cpp
examples/fftn_Z_pencil/: CMakeLists.txt  fftn_zpencil.py  main.cpp
examples/gysela_like/: CMakeLists.txt  main.cpp
examples/gysela_like_v2/: CMakeLists.txt  main.cpp
examples/gysela_like_v3/: CMakeLists.txt  main.cpp
examples/navier-stokes/: CMakeLists.txt  main.cpp  math_utils.hpp
examples/navier-stokes-MPI/: CMakeLists.txt  main.cpp
examples/navier-stokes-MPI-batched/: CMakeLists.txt  main.cpp
examples/navier-stokes-memory/: 01_navier_stokes.cpp
examples/rfftn_X_pencil/: CMakeLists.txt  main.cpp
examples/rfftn_X_pencil_v2/: CMakeLists.txt  main.cpp
examples/rfftn_X_pencil_v3/: CMakeLists.txt  main.cpp
examples/rfftn_X_pencil_v4/: CMakeLists.txt  main.cpp
examples/rfftn_X_pencil_v5/: CMakeLists.txt  main.cpp
examples/rfftn_X_slab/: CMakeLists.txt  main.cpp
examples/rfftn_Y_pencil/: CMakeLists.txt  main.cpp
examples/rfftn_Y_pencil_v2/: CMakeLists.txt  main.cpp
examples/rfftn_Z_pencil/: CMakeLists.txt  main.cpp
examples/rfftn_Z_pencil_v1/: CMakeLists.txt  main.cpp
examples/rfftn_Z_pencil_v2/: CMakeLists.txt  main.cpp
examples/rfftn_Z_pencil_v3/: CMakeLists.txt  main.cpp
examples/rfftn_Z_pencil_v4/: CMakeLists.txt  main.cpp
examples/rfftn_Z_pencil_v5/: CMakeLists.txt  main.cpp
examples/rfftn_Z_pencil_v6/: CMakeLists.txt  main.cpp
examples/utils/: io_utils.hpp  math_utils.hpp
