add_subdirectory(derivative) 
add_subdirectory(derivative-v2) 
add_subdirectory(derivative_X_slab)
add_subdirectory(derivative_X_slab_v2)
add_subdirectory(derivative_X_slab_v3)
#add_subdirectory(derivative_X_slab_v4)
add_subdirectory(derivative_Y_slab)
add_subdirectory(derivative_Y_slab_v2)
add_subdirectory(derivative_Y_slab_v3)
add_subdirectory(fftn)
add_subdirectory(fftn_Z2Y)
add_subdirectory(fftn_X_pencil)
add_subdirectory(fftn_Y_pencil)
add_subdirectory(fftn_Z_pencil)
add_subdirectory(rfftn_X_pencil)
add_subdirectory(rfftn_X_pencil_v2)
add_subdirectory(rfftn_X_pencil_v3)
add_subdirectory(rfftn_X_pencil_v4)
add_subdirectory(rfftn_X_pencil_v5)
add_subdirectory(rfftn_Y_pencil)
add_subdirectory(rfftn_Y_pencil_v2)
add_subdirectory(rfftn_Z_pencil)
add_subdirectory(rfftn_Z_pencil_v1)
add_subdirectory(rfftn_Z_pencil_v2)
add_subdirectory(rfftn_Z_pencil_v3)
add_subdirectory(rfftn_Z_pencil_v4)
add_subdirectory(rfftn_Z_pencil_v5)
add_subdirectory(rfftn_Z_pencil_v6)
add_subdirectory(gysela_like)
add_subdirectory(gysela_like_v2)
add_subdirectory(gysela_like_v3)
#add_subdirectory(gysela_like_v4)
add_subdirectory(navier-stokes)
#add_subdirectory(navier - stokes - dist)
